Fixed white space between sections changed to 2.5rem

--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header {
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
     .topnav {
-        top: 3.5vw;
-        right: 5vw;
+        top: -1.5vw;
+        right: 1.5vw;
         overflow: hidden;
         position: fixed;
         z-index: 2;
@@ -39,7 +39,7 @@ header {
       }
       
       #spacer {
-        height: 15.4vw;
+        height: 12vw;
       }
 
       .topnav #myLinks {
@@ -47,8 +47,21 @@ header {
       }
 
       .topnav #myLinks .color {
-        background-color: green;
-        width: 50vw;
+        background-color: gray;
+        width: 45vw;
+        border: 1px solid black;
+        border-top: none;
+        border-bottom-left-radius: 1vw;
+        border-bottom-right-radius: 1vw;
+      }
+
+      #myLinks .color a{
+        font-family: "Averia Serif Libre";
+        font-size: 3.5vw;
+      }
+
+      #myLinks a:hover {
+        background-color: red;
       }
       
       .topnav a {
@@ -66,11 +79,6 @@ header {
         top: 0;
       }
       
-      #myLinks .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-      
       .active {
         display: none;
       }
@@ -78,11 +86,9 @@ header {
     header nav {
         display: none;
     }
-}
 
-@media only screen and (min-width: 481px) {
-    #mobile {
-        display:none;
+    header {
+        height: 10vw;
     }
 }
 
@@ -147,7 +153,7 @@ header nav a {
 /*----------------------------------- Welcome ----------------------------------------*/
 
 #Welcome {
-    top: 5.4375rem;
+    top: 2.5rem;
     width: 100vw;
     /*height: 61rem;*/
     height: 50vw;
@@ -159,7 +165,7 @@ header nav a {
 }
 
 #Welcome .container {
-    grid-area: 1 / 2 / span 20 / span 18;
+    grid-area: 1 / 2 / span 22 / span 18;
     background-image: url(./Images/background.jpg);
     background-position: center;
     background-size: cover;
@@ -247,7 +253,7 @@ header nav a {
 /*------------------------------------- About ---------------------*/
 
 #About {
-    top: 5.4375rem;
+    top: 2.5rem;
     width: 100%;
     height: 60rem;
     border-top-style: inset;
@@ -333,7 +339,7 @@ header nav a {
 /*----------------------------------- Portfolio ---------------------------------------*/
 
 #Portfolio {
-    top: 5.4375rem;
+    top: 2.5rem;
     width: 100%;
     height: 100rem;
     border-top-style: groove;
@@ -451,7 +457,7 @@ header nav a {
 }
 /*----------------------------------- Services ----------------------------------------*/
 #Services {
-    top: 5.4375rem;
+    top: 2.5rem;
     width: 100%;
     height: 60vw;
     border-top-style: double;
@@ -604,7 +610,7 @@ header nav a {
 
 /*------------------------ Locations & Hours ----------------------*/
 #Locations {
-    top: 5.4375rem;
+    top: 2.5rem;
     display: grid;
     height: 60vw;
     width: 100%;
@@ -757,7 +763,7 @@ header nav a {
 /*---------------------------- Contact ----------------------------*/
 
 #Contact {
-    top: 5.4375rem;
+    top: 2.5rem;
     height: 50vw;
     width: 100%;
     display: grid;
